// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders block button type correctly 1`] = `
<button
  className="css-1shwb05"
>
  A block button!
</button>
`;

exports[`Button renders default button type correctly 1`] = `
<button
  className="css-v7sskl"
>
  A button!
</button>
`;

exports[`Button renders default button type correctly 2`] = `
<button
  className="css-bujbck"
>
  A button!
</button>
`;

exports[`Button renders default button type correctly 3`] = `
<button
  className="css-ns5hzj"
>
  A button!
</button>
`;

exports[`Button renders huge button type correctly 1`] = `
<button
  className="css-1m3y3w9"
>
  A huge button!
</button>
`;

exports[`Button renders native button correctly 1`] = `
<button
  className="css-v7sskl"
>
  A button!
</button>
`;

exports[`ButtonLink renders link button correctly 1`] = `
<a
  className="css-v7sskl"
  href="/home"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  A link button!
</a>
`;
